--- a/package.json
+++ b/package.json
@@ -1,29 +1,24 @@
 {
   "name": "testingspace",
-  "source": "src/index.html",
-  "scripts": {
-    "start": "parcel",
-    "build": "parcel build",
-    "predeploy": "rm -rf dist && parcel build --public-url testing.dawes.cc && cp CNAME ./dist",
-    "deploy": "gh-pages -d dist"
-  },
-  "dependencies": {
-    "@babel/core": "latest",
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
-    "@mui/icons-material": "latest",
-    "@mui/material": "latest",
-    "@parcel/transformer-sass": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "gh-pages": "^4.0.0",
-    "parcel": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "typescript": "latest"
-  },
+  "author": "Ryan Dawes",
   "devDependencies": {
-    "process": "^0.11.10",
-    "react-scripts": "latest"
+    "autoprefixer": "^10.4.7",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015-ie": "^6.7.0",
+    "bulma": "^0.9.3",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^9.1.0",
+    "sass": "^1.51.0"
+  },
+  "scripts": {
+    "css-deploy": "npm run css-build && npm run css-postcss",
+    "css-build": "sass --no-source-map _sass/main.scss:css/main.css",
+    "css-postcss": "postcss --use autoprefixer --output css/main.css css/main.css",
+    "css-watch": "npm run css-build -- --watch",
+    "deploy": "npm run css-deploy && npm run js-build",
+    "js-build": "babel _javascript --out-dir lib",
+    "js-watch": "npm run js-build -- --watch",
+    "start": "npm-run-all --parallel css-watch js-watch"
   }
 }
