--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015-ie": "^6.7.0",
     "bulma": "^0.9.3",
+    "gh-pages": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^9.1.0",
     "sass": "^1.51.0",
-    "gh-pages": "latest",
     "typescript": "latest"
   },
   "scripts": {
@@ -22,9 +22,10 @@
     "js-build": "babel _javascript --out-dir lib",
     "js-watch": "npm run js-build -- --watch",
     "start": "npm-run-all --parallel css-watch js-watch",
-    "pages": "pages -d"
+    "pages": "gh-pages -d ."
   },
   "dependencies": {
+    "bulma-start": "^0.0.5",
     "npm": "^8.13.2"
   }
 }
