--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
   "name": "testingspace",
   "author": "Ryan Dawes",
+  "private": true,
   "dependencies": {
-    "@babel/cli": "latest",
-    "@babel/core": "latest",
-    "@babel/preset-typescript": "latest",
-    "gh-pages": "^4.0.0",
-    "npm-run-all": "^4.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "latest",
     "typescript": "latest"
   },
-  "scripts": {
-    "css-watch":"sass --watch --no-source-map _sass/:css/",
-    "js-watch": "babel  --extensions '.tsx' _javascript --watch --out-file lib/main.js",
-    "dev":"npm-run-all --parallel css-watch js-watch",
-
-    "css-build": "sass --no-source-map _sass/:css/",
-    "js-build": "babel --extensions '.tsx' _javascript --out-file lib/main.js",
-    "build": "npm-run-all --parallel css-build js-build",
-
-    "copy": "rm -rf dist && mkdir dist && cp CNAME *.html ./dist && cp -r css/ lib/ assets/ ./dist",
-    "pages": "gh-pages -d ./dist",
-    "deploy": "npm-run-all --sequential build copy pages"
-  },
   "devDependencies": {
-    "npm": "^8.13.2"
+    "@parcel/transformer-sass": "^2.6.2",
+    "babel-loader": "^8.2.5",
+    "bulma": "^0.9.4",
+    "gh-pages": "^4.0.0",
+    "npm": "^8.13.2",
+    "npm-run-all": "^4.1.5",
+    "parcel": "^2.6.2"
+  },
+  "scripts": {
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html",
+    "clean": "rm -rf dist/",
+    "copy": "cp CNAME dist/",
+    "pages": "gh-pages -d dist/",
+    "deploy": "npm-run-all --sequential clean build copy pages"
   }
 }
