--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "author": "Ryan Dawes",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
+    "bulma": "^0.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "latest",
@@ -10,12 +15,14 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.2",
+    "@types/react-dom": "18.0.6",
     "babel-loader": "^8.2.5",
-    "bulma": "^0.9.4",
     "gh-pages": "^4.0.0",
     "npm": "^8.13.2",
     "npm-run-all": "^4.1.5",
-    "parcel": "^2.6.2"
+    "parcel": "^2.6.2",
+    "process": "^0.11.10",
+    "react-scripts": "latest"
   },
   "scripts": {
     "dev": "parcel src/index.html",
