--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "latest",
-    "typescript": "latest"
+    "typescript": "latest",
+    "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.2",
     "@types/react-dom": "18.0.6",
-    "babel-loader": "^8.2.5",
     "gh-pages": "^4.0.0",
     "npm": "^8.13.2",
     "npm-run-all": "^4.1.5",
