--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
+    "@tailwindcss/forms": "^0.5.2",
     "bulma": "^0.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "latest",
-    "typescript": "latest",
-    "tailwindcss": "^3.1.4"
+    "tailwindcss": "^3.1.4",
+    "typescript": "latest"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.2",
