--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "react-scripts": "latest"
   },
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "dev": "parcel src/pages/*.html",
+    "build": "parcel build src/pages/*.html",
     "clean": "rm -rf dist/",
     "copy": "cp CNAME dist/",
     "pages": "gh-pages -d dist/",
